--- a/src/DevIo.NerdStore.Catalogo.Domain/DevIo.NerdStore.Catalogo.Domain.csproj
+++ b/src/DevIo.NerdStore.Catalogo.Domain/DevIo.NerdStore.Catalogo.Domain.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\DevIo.NerdStore.Core\DevIo.NerdStore.Core.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="MediatR" Version="8.0.1" />
+    </ItemGroup>
+
 </Project>
