Iniciando com commands e handlers - ajustando modulo de apresentacao

--- a/src/DevIo.NerdStore.WebApp.MVC/DevIo.NerdStore.WebApp.MVC.csproj
+++ b/src/DevIo.NerdStore.WebApp.MVC/DevIo.NerdStore.WebApp.MVC.csproj
@@ -25,6 +25,7 @@
       <ProjectReference Include="..\DevIo.NerdStore.Catalogo.Data\DevIo.NerdStore.Catalogo.Data.csproj" />
       <ProjectReference Include="..\DevIo.NerdStore.Catalogo.Domain\DevIo.NerdStore.Catalogo.Domain.csproj" />
       <ProjectReference Include="..\DevIo.NerdStore.Core\DevIo.NerdStore.Core.csproj" />
+      <ProjectReference Include="..\DevIo.NerdStore.Vendas.Application\DevIo.NerdStore.Vendas.Application.csproj" />
     </ItemGroup>
 
 </Project>
