--- a/src/DevIo.NerdStore.WebApp.MVC/appsettings.Development.json
+++ b/src/DevIo.NerdStore.WebApp.MVC/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "DataSource=app.db"
+    "DefaultConnection": "Server=tcp:server-estudos.database.windows.net,1433;Initial Catalog=bd-estudos;Persist Security Info=False;User ID=giovannisacch;Password=Souftwnoob1;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
